# SubtranSlate

./: .gitattributes  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: Build & Release.yml  wheels.yml
src/subtranslate/: __init__.py  __main__.py  cli.py
src/subtranslate/core/: __init__.py  main.py  subtitle.py  translation.py
src/subtranslate/utilities/: __init__.py  encoding_converter.py
src/utilities/: __init__.py  util_srt.py  util_trans.py  utils.py
subtranslate/: __init__.py  cli.py
subtranslate/core/: subtitle.py
tests/: __init__.py  test_cli.py  test_encoding_converter.py  test_main.py  test_main_module.py  test_subtitle.py  test_subtitle_comprehensive.py  test_translation.py  test_translation_comprehensive.py
utilities/: __init__.py  util_srt.py  util_trans.py
