[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtranslate-py"
version = "1.0.0"
authors = [
    {name = "tboy1337", email = "tboy1337.unchanged733@aleeas.com"},
]
description = "A tool for translating subtitle files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyexecjs",
    "srt",
    "requests",
    "jieba",
]

[project.urls]
"Homepage" = "https://github.com/tboy1337/SubtranSlate"
"Bug Tracker" = "https://github.com/tboy1337/SubtranSlate/issues"

[project.scripts]
subtranslate = "subtranslate.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["subtranslate", "utilities"] 